# cover

./: README.md  meson.build
examples/: assert.c  finit.c  meson.build
include/: meson.build
include/cover/: suite.h
src/libcover/: backends.c  backends.h  case.h  meson.build  suite.c
src/libcover/backends/: output.c  pretty.c  tap.c
test/: assert.c  meson.build  signal.c
